--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jest": "^24.9.0",
     "react": "^16.11.0",
     "react-card-flip": "^0.8.1",
     "react-dom": "^16.11.0",
@@ -11,11 +12,18 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom --modulePaths=src",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "env": {
+      "jest/globals": true
+    },
+    "plugins": [
+      "jest"
+    ],
+    "rules": {}
   },
   "browserslist": {
     "production": [
