--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "jest": "^24.9.0",
     "react": "^16.11.0",
     "react-card-flip": "^0.8.1",
