--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"gatsby-transformer-sharp": "^3.14.0",
 		"prettier": "^2.4.1",
 		"react": "^17.0.1",
+		"react-card-flip": "^1.1.3",
 		"react-dom": "^17.0.1",
 		"styled-components": "^5.3.1"
 	},
