--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"gatsby-plugin-image": "^1.14.0",
 		"gatsby-plugin-mdx": "^2.14.0",
 		"gatsby-plugin-prettier-eslint": "^1.0.6",
+		"gatsby-plugin-react-svg": "^3.0.1",
 		"gatsby-plugin-sharp": "^3.14.0",
 		"gatsby-plugin-styled-components": "^4.14.0",
 		"gatsby-source-filesystem": "^3.14.0",
