--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@mdx-js/react": "^1.6.22",
 		"babel-plugin-styled-components": "^1.13.2",
 		"gatsby": "^3.13.1",
+		"gatsby-plugin-canonical-urls": "^4.0.0",
+		"gatsby-plugin-feed": "^4.0.0",
 		"gatsby-plugin-fontawesome-css": "^1.1.0",
 		"gatsby-plugin-image": "^1.14.0",
 		"gatsby-plugin-mdx": "^2.14.0",
