--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
 		"gatsby-transformer-sharp": "^3.14.0",
 		"prettier": "^2.4.1",
 		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
 		"styled-components": "^5.3.1"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^12.1.2",
+		"@testing-library/react-hooks": "^7.0.2",
 		"babel-jest": "^27.3.1",
 		"babel-preset-gatsby": "^2.0.0",
 		"eslint": "^7.32.0",
@@ -50,6 +52,7 @@
 		"eslint-plugin-react": "^7.26.0",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^27.3.1",
+		"react-dom": "^17.0.2",
 		"react-test-renderer": "^17.0.2"
 	}
 }
