add verbose develop script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "develop": "gatsby develop",
+    "develop:verbose": "gatsby develop --verbose",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
